--- a/QL_CDC-master/QL_CDC/QL_CDC.csproj
+++ b/QL_CDC-master/QL_CDC/QL_CDC.csproj
@@ -24,6 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Views\SanPham\ThoiTrang\" />
     <Folder Include="wwwroot\sanpham\" />
   </ItemGroup>
 
